# NeueBot

./: .tb_history  README.md
Launchers/: .tb_history  ApplicationLauncher.ops  (+15 more)
cartesian_trajectory_controller/: CMakeLists.txt  package.xml
cartesian_trajectory_controller/doc/: Doxyfile
cartesian_trajectory_controller/include/cartesian_trajectory_controller/: cartesian_trajectory_controller_types.hpp
cartesian_trajectory_controller/src/: CMakeLists.txt  Makefile  cartesian_trajectory_controller-component.cpp  cartesian_trajectory_controller-component.hpp  cartesian_trajectory_controller-errorcode.hpp  cmake_install.cmake
cartesian_trajectory_controller/trajectories/: CMakeLists.txt  Makefile  cartesian_trajectory_generator.cpp  cartesian_trajectory_generator.hpp  cmake_install.cmake
control_modes_interface/: CMakeLists.txt  package.xml
control_modes_interface/doc/: Doxyfile
control_modes_interface/include/control_modes_interface/: control_modes_interface-types.hpp
control_modes_interface/src/: CMakeLists.txt  control_modes_interface-component.cpp  control_modes_interface-component.hpp  control_modes_interface-errorcode.hpp
joint_trajectory_controller/: CMakeLists.txt  package.xml
joint_trajectory_controller/doc/: Doxyfile  joint_trajectory_controller.html  joint_trajectory_controller.tag
joint_trajectory_controller/motion_through_points/: CMakeLists.txt  motion_through_points_trajectory_generator.cpp  motion_through_points_trajectory_generator.hpp
joint_trajectory_controller/motion_through_points_linear_spline/: CMakeLists.txt  motion_profile.cpp  motion_through_points_trajectory_generator.cpp
joint_trajectory_controller/point_to_point/: point_to_point_trajectory_generator.cpp
joint_trajectory_controller/src/: CMakeLists.txt  joint_trajectory_controller-component.cpp  joint_trajectory_controller-component.hpp  joint_trajectory_controller-errorcode.hpp
joint_trajectory_controller_hollow/: CMakeLists.txt  package.xml
joint_trajectory_controller_hollow/doc/: Doxyfile
joint_trajectory_controller_hollow/include/joint_trajectory_controller_hollow/: joint_trajectory_controller_hollow_types.hpp
joint_trajectory_controller_hollow/motion_through_points/: CMakeLists.txt  motion_through_points_trajectory_generator.cpp  motion_through_points_trajectory_generator.hpp
joint_trajectory_controller_hollow/motion_through_points_linear_spline/: motion_profile.hpp  motion_through_points_trajectory_generator.hpp
joint_trajectory_controller_hollow/point_to_point/: CMakeLists.txt  point_to_point_trajectory_generator.cpp  point_to_point_trajectory_generator.hpp
joint_trajectory_controller_hollow/src/: CMakeLists.txt  joint_trajectory_controller_hollow-component.cpp  joint_trajectory_controller_hollow-component.hpp  joint_trajectory_controller_hollow-errorcode.hpp
kinematics_module/src/: CMakeLists.txt  kinematics_module-component.cpp  kinematics_module-component.hpp  kinematics_module-errorcode.hpp
kuka_lbr_fri/: CMakeLists.txt  README.md  package.xml  test.ops
kuka_lbr_fri/doc/: Doxyfile  Doxyfile_cpc
kuka_lbr_fri/include/kuka_lbr_fri/: kuka_lbr_fri-types.hpp
kuka_lbr_fri/src/: CMakeLists.txt  circular_vector_buffer.hpp  fri_driver.cpp  fri_driver.hpp  fri_joint_overlay_client.cpp  fri_joint_overlay_client.hpp  kuka_lbr_fri-component.cpp  kuka_lbr_fri-component.hpp  kuka_lbr_fri-errorcode.hpp  persistent_vector_queue.hpp
procedure_coordinator/: CMakeLists.txt  package.xml
procedure_coordinator/doc/: Doxyfile
procedure_coordinator/include/procedure_coordinator/: procedure_coordinator_types.hpp
procedure_coordinator/src/: CMakeLists.txt  procedure_coordinator-component.cpp  procedure_coordinator-component.hpp  procedure_coordinator-errorcode.hpp
registration/src/: CMakeLists.txt  registration-component.cpp  registration-component.hpp  registration-errorcode.hpp
robot_state/: CMakeLists.txt  package.xml
robot_state/doc/: Doxyfile  robot_state.html  robot_state.tag
robot_state/forward_kinematics/: CMakeLists.txt  forward_kinematics.cpp  forward_kinematics.hpp  global_configuration.hpp
robot_state/include/robot_state/: robot_state_types.hpp
robot_state/src/: CMakeLists.txt  robot_state-component.cpp  robot_state-component.hpp
surgery_plan/: CMakeLists.txt  package.xml
surgery_plan/doc/: Doxyfile
surgery_plan/include/surgery_plan/: surgery_plan_types.hpp
surgery_plan/kdl_marshaller/src/: CMakeLists.txt  kdl_marshaller.h  marshaller_surgery_plan.cpp  marshaller_surgery_plan.h
surgery_plan/src/: CMakeLists.txt  surgery_plan-component.cpp  surgery_plan-component.hpp  surgery_plan-errorcode.hpp
surgery_plan/types/: surgery_plan
test_supervisor/: CMakeLists.txt  package.xml
test_supervisor/doc/: Doxyfile
test_supervisor/include/test_supervisor/: test_supervisor_types.hpp
test_supervisor/src/: CMakeLists.txt  test_supervisor-component.cpp  test_supervisor-component.hpp  test_supervisor-errors.hpp
test_vrep_fri/src/: CMakeLists.txt  test_vrep_fri-component.cpp  test_vrep_fri-component.hpp  test_vrep_fri-errorcode.hpp
transformations/: CMakeLists.txt  package.xml
transformations/doc/: Doxyfile  Transformations.html  transformations.tag
transformations/include/transformations/: transformations_types.hpp
transformations/src/: CMakeLists.txt  transformations-component.cpp  transformations-component.hpp  transformations-errorcode.hpp
v_repExtSurgRobotControl/: CMakeLists.txt  v_repExtSurgRobotControl.cpp  v_repExtSurgRobotControl.h
v_repExtSurgRobotControl/include/: CMakeLists.txt  endeffector_component.h  endeffector_handler.h  ik_handler.h  plugin_deployer.h  robot_component.h  robot_handler.h  string_concurrent_queue.h  surgery_trajectories_component.h  surgery_trajectories_handler.h  vector_concurrent_queue.h
v_repExtSurgRobotControl/src/: CMakeLists.txt  endeffector_component.cpp  endeffector_handler.cpp  ik_handler.cpp  plugin_deployer.cpp  robot_component.cpp  robot_handler.cpp  string_concurrent_queue.cpp  surgery_trajectories_component.cpp  surgery_trajectories_handler.cpp  vector_concurrent_queue.cpp
(+75 files in other folders)
