<package>
  <name>joint_trajectory_controller_hollow</name>
  <version>1.0.0</version>
  <description>This package contains the components of the joint_trajectory_controller package</description>
  <maintainer email="cfaria@dei.uminho.pt">Carlos Faria</maintainer>
  <license>Unknown</license>
  <url type="website"></url>
  <author>Carlos Faria</author>

  <build_depend>rtt</build_depend>
  <build_depend>ocl</build_depend>

  <run_depend>rtt</run_depend> 

  <export>
    <rtt_ros>
    </rtt_ros>
  </export>

</package>
