<package>
  <name>procedure_coordinator</name>
  <version>1.0.0</version>
  <description>This package contains the components of the procedure_coordinator package</description>
  <maintainer email="cfaria@dei.uminho.pt">Carlos Faria</maintainer>
  <license>GPLv3</license>
  <url type="website"></url>
  <author>Carlos Faria</author>

  <build_depend>rtt</build_depend>
  <build_depend>ocl</build_depend>

  <run_depend>rtt</run_depend> 

</package>
