<package>
  <name>test_supervisor</name>
  <version>1.0.0</version>
  <description>This package contains the components of the task_supervisor package</description>
  <maintainer email="cfaria@dei.uminho.pt">Carlos Faria</maintainer>
  <license>GPLv3</license>
  <url type="website"></url>
  <author>Carlos Faria</author>

  <build_depend>rtt</build_depend>
  <build_depend>ocl</build_depend>
	<build_depend>kdl</build_depend>
	<build_depend>kdl_typekit</build_depend>

  <run_depend>rtt</run_depend> 

</package>

